# clancy

./: CMakeLists.txt  README.md
include/: bot.h  irc.h  message.h  module.h
include/modules/: say.h
src/: bot.cpp  clancy.cpp  irc.cpp
src/modules/: say.cpp
